reduced nav tabs width to stop wrapping at screen width just above mobile.

--- a/engineclub/apps/cab/home/compass/src/style.scss
+++ b/engineclub/apps/cab/home/compass/src/style.scss
@@ -185,7 +185,7 @@ ul.base-tabs {
 		margin: 0;
 		font-size: 1.8em;
 		a {
-			padding: 0.1em 2em;
+			padding: 0.1em 1.8em;
 		}
 		a:hover {
 			background-color: $tab_bg;
